# findmy-fm

./: .coverage  .env.example  .env.live.example  .gitignore  AUDIT_SUMMARY.md  CHANGELOG.md  COMPLETION_VERIFICATION.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README_OLD.md  TS_IMPLEMENTATION.md  V0.5.0_RELEASE_SUMMARY.md  alembic.ini  conftest.py  docker-compose.yml  findmy_fm_paper.db  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-app.txt  requirements-dev.txt  requirements-prod.txt  requirements.txt
.claude/: settings.json
.claude/agents/: backend-builder.md  frontend-htmx.md  (+4 more)
.github/: copilot-instructions.md
alembic/: env.py
app/: __init__.py  audit.py  auditview.py  backtest.py  charts.py  circuit.py  clock.py  config.py  costengine.py  costs.py  db.py  execution.py  guardian.py  hyperopt.py  main.py  market.py  ml.py  models.py  notify.py  notify_discord.py  orders.py  pnlcal.py  portfolio.py  risk.py  routes.py  runtime.py  savings.py  scanner.py  scheduler.py  security.py  timefmt.py
data/: findmy_fm_paper.db
docs/: AGENTS.md  GOLIVE_COPILOT.md  GO_LIVE.md  README.md  REBUILD.md  RUNBOOK.md  SOT.md  advanced-execution.md  api.md  architecture.md  configuration.md  dashboard.md  database-schema.md  deployment.md  dual-instance.md  execution.md  go-live.md  kss-accounting-upgrade-plan.md  kss-dynamic-tp-plan.md  kss.md  manual-approval.md  market-data.md  market-integration.md  modules.md  observability.md  opus-godmode-plan.md  opus-orchestrator-plan.md  pyramid-up-plan.md  regime-mae-plan.md  risk-management.md  roadmap.md  rules.md  security.md  strategy.md  telegram-cloudflare-proxy.md  telegram-setup.md  v0.7.0-release.md
examples/: README.md  sample_purchase_order_english.xlsx  sample_purchase_order_no_header.xlsx  sample_purchase_order_with_errors.xlsx  sample_purchase_order_with_header.xlsx
monitoring/: ai_agent_alerts.yml  alerts.yml  prometheus.yml
scripts/: consolidate_fet.py  migrate.sh  observe_full_auto.py  preflight_check.py  replay_scans.py  run_live.ps1  run_paper.ps1  seed_admin.py  start_api.sh  start_prod.sh  test_executor.py  test_sot_dal.py  test_tls_frag.py
templates/: base.html  dashboard.html
tests/: test_advanced_execution.py  test_api.py  test_async_execution.py  test_dashboard.py  test_kss.py  test_market_data.py  test_observability.py  test_paper_execution.py  test_pending_orders.py  test_priority1_perf.py  test_priority3_caching.py  test_priority4_metrics.py  test_risk_management.py  test_ts_service.py  test_v0_4_0_features.py
(+294 files in other folders)
