[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "findmy"
version = "0.1.0"
description = "FINDMY trading bot - Research-first modular trading system with paper trading execution engine"
authors = [{name = "FINDMY Contributors"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
repository = "https://github.com/KaisukaTran/findmy-fm"

[project.urls]
Documentation = "https://github.com/KaisukaTran/findmy-fm/tree/main/docs"
"Bug Tracker" = "https://github.com/KaisukaTran/findmy-fm/issues"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.124.4"
uvicorn = "^0.38.0"
pandas = "^2.3.3"
sqlalchemy = "^2.0.23"
openpyxl = "^3.11.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.0.0"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
black = "^23.12.1"
flake8 = "^6.1.0"
ruff = "^0.1.9"
mypy = "^1.7.1"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
jupyter = "^1.0.0"
jupyterlab = "^4.4.10"
ipdb = "^0.13.13"
pip-audit = "^2.6.1"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long, handled by black
    "B008",   # function call in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short --cov=src --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"
markers = [
    "integration: integration tests",
    "unit: unit tests",
    "slow: slow running tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
